care/force-app/main/default/objects/MilestoneandEntitlementSettings__c/MilestoneandEntitlementSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Used to specify the thresholds, and other default settings</description>
    <label>Milestone and Entitlement Settings</label>
</CustomObject>