care/force-app/main/default/objects/MilestoneandEntitlementSettings__c/fields/Case_Origin_to_Exclude__c.field-meta.xml
<CustomField>
    <fullName>Case_Origin_to_Exclude__c</fullName>
    <inlineHelpText>Indicates the origin&apos;s of a case that should NOT have a first response milestone created</inlineHelpText>
    <label>Case Origins to Exclude</label>
    <type>TextArea</type>
</CustomField>