care/force-app/main/default/objects/MilestoneandEntitlementSettings__c/fields/Final_Resolution_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Final_Resolution_Milestone__c</fullName>
    <inlineHelpText>Indicates the milestone to create</inlineHelpText>
    <label>Final Resolution Milestone</label>
    <type>TextArea</type>
</CustomField>