care/force-app/main/default/objects/MilestoneandEntitlementSettings__c/fields/Final_Resolution_Milestone_Statuses__c.field-meta.xml
<CustomField>
    <fullName>Final_Resolution_Milestone_Statuses__c</fullName>
    <label>Final Resolution Milestone Statuses</label>
    <type>TextArea</type>
</CustomField>