care/force-app/main/default/objects/MilestoneandEntitlementSettings__c/fields/First_Response_Milestone_Statuses__c.field-meta.xml
<CustomField>
    <fullName>First_Response_Milestone_Statuses__c</fullName>
    <inlineHelpText>Indicates the Status a case should be in for a First Response Milestone should be created</inlineHelpText>
    <label>First Response Milestone Statuses</label>
    <type>TextArea</type>
</CustomField>