care/force-app/main/default/objects/MilestoneandEntitlementSettings__c/fields/Global_Entitlement_Name__c.field-meta.xml
<CustomField>
    <fullName>Global_Entitlement_Name__c</fullName>
    <label>Global Entitlement Name</label>
    <type>TextArea</type>
</CustomField>