care/force-app/main/default/objects/MilestoneandEntitlementSettings__c/fields/Repeating_First_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Repeating_First_Milestone__c</fullName>
    <inlineHelpText>Specifies the milestone to assign</inlineHelpText>
    <label>Repeating First Milestone</label>
    <type>TextArea</type>
</CustomField>