care/force-app/main/default/objects/MilestoneandEntitlementSettings__c/fields/Violation_Approaching_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Violation_Approaching_Threshold__c</fullName>
    <inlineHelpText>In Minutes</inlineHelpText>
    <label>Violation Approaching Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>